scrollbar fix

--- a/style.css
+++ b/style.css
@@ -139,3 +139,13 @@ span.text-small {
   width: 350px;
   height: 355px;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
